--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -57,42 +57,42 @@ app-template:
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-prod
       hosts:
-        - host: &jellyfinHost jellyfin.khuedoan.com
+        - host: &jellyfinHost jellyfin.lmao.dog
           paths:
             - path: /
               pathType: Prefix
               service:
                 name: main
                 port: http
-        - host: &transmissionHost transmission.khuedoan.com
+        - host: &transmissionHost transmission.lmao.dog
           paths:
             - path: /
               pathType: Prefix
               service:
                 name: main
                 port: transmission
-        - host: &prowlarrHost prowlarr.khuedoan.com
+        - host: &prowlarrHost prowlarr.lmao.dog
           paths:
             - path: /
               pathType: Prefix
               service:
                 name: main
                 port: prowlarr
-        - host: &radarrHost radarr.khuedoan.com
+        - host: &radarrHost radarr.lmao.dog
           paths:
             - path: /
               pathType: Prefix
               service:
                 name: main
                 port: radarr
-        - host: &sonarrHost sonarr.khuedoan.com
+        - host: &sonarrHost sonarr.lmao.dog
           paths:
             - path: /
               pathType: Prefix
               service:
                 name: main
                 port: sonarr
-        - host: &jellyseerrHost jellyseerr.khuedoan.com
+        - host: &jellyseerrHost jellyseerr.lmao.dog
           paths:
             - path: /
               pathType: Prefix
